# moxiang

./: .gitignore  BUILD_SUCCESS.md  CLAUDE.md  DATABASE_SETUP_COMPLETE.md  README.md  check_status.bat  copy_dlls.bat  launch_all.bat  run_servers.bat  start.bat  start_agentserver.bat  start_all_servers.bat  start_distributeserver.bat  start_mapserver.bat  start_murimnetserver.bat  start_servers.ps1  stop.bat  启动所有服务器.bat  启动服务器.bat
src/: CMakeLists.txt
src/agent-server/: CMakeLists.txt
src/agent-server/handlers/: LoginHandler.cpp  LoginHandler.hpp
src/agent-server/main/: main.cpp
src/agent-server/managers/: AgentServerManager.cpp  AgentServerManager.hpp
src/core/: CMakeLists.txt  mock_pqxx.hpp  mock_spdlog.hpp  spdlog_header.hpp  spdlog_wrapper.hpp
src/core/config/: CMakeLists.txt
src/core/crypto/: CMakeLists.txt
src/core/database/: AccountDAO.cpp  AccountDAO.hpp  CMakeLists.txt  CharacterDAO.cpp  CharacterDAO.hpp  ChatDAO.cpp  ChatDAO.hpp  DatabaseCommon.hpp  DatabasePool.cpp  DatabasePool.hpp  DatabaseUtils.cpp  DatabaseUtils.hpp  DialogueDAO.cpp  DialogueDAO.hpp  FriendDAO.cpp  FriendDAO.hpp  GuildDAO.cpp  GuildDAO.hpp  ItemDAO.cpp  ItemDAO.hpp  MonsterDAO.cpp  MonsterDAO.hpp  NPCDAO.cpp  NPCDAO.hpp  PartyDAO.cpp  PartyDAO.hpp  QueryExecutor.cpp  QueryExecutor.hpp  QuestDAO.cpp  QuestDAO.hpp  ShopDAO.cpp  ShopDAO.hpp  SkillDAO.cpp  SkillDAO.hpp  TransactionHelper.hpp  WarehouseDAO.cpp  WarehouseDAO.hpp  libpq_wrapper.hpp  mock_database.hpp  mock_pqxx.hpp  (+1 more)
src/core/localization/: CMakeLists.txt  Language.hpp  LocalizationManager.cpp  LocalizationManager.hpp
src/core/logger/: CMakeLists.txt
src/core/network/: Acceptor.cpp  Acceptor.hpp  ByteBuffer.cpp  ByteBuffer.hpp  CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  IOContext.cpp  IOContext.hpp  MessageRouter.cpp  MessageRouter.hpp  NotificationService.cpp  NotificationService.hpp  PacketSerializer.cpp  PacketSerializer.hpp  ServerConnection.cpp  ServerConnection.hpp  ServerMessage.cpp  ServerMessage.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp
src/core/protocol/: CMakeLists.txt  MessageRegistry.cpp  MessageRegistry.hpp  NetworkPacket.cpp  NetworkPacket.hpp  ServerProtocol.hpp
src/core/resource/: CMakeLists.txt  Resource.cpp  Resource.hpp
src/core/security/: CMakeLists.txt  RateLimiter.cpp  RateLimiter.hpp
src/core/session/: CMakeLists.txt  SessionManager.cpp  SessionManager.hpp
src/core/spatial/: CMakeLists.txt  QuadTree.cpp  QuadTree.hpp  SpatialIndex.cpp  SpatialIndex.hpp
src/distribute-server/: CMakeLists.txt
src/distribute-server/main/: main.cpp
src/distribute-server/managers/: DistributeServerManager.cpp  DistributeServerManager.hpp
src/map-server/: CMakeLists.txt
src/map-server/ai/: MonsterAI.cpp  MonsterAI.hpp  MonsterStateMachine.cpp  MonsterStateMachine.hpp
src/map-server/entities/: Monster.cpp  Monster.hpp
src/map-server/handlers/: ItemMessageHandler.cpp  ItemMessageHandler.hpp  NPCMessageHandler.hpp
src/map-server/main/: main.cpp
src/map-server/managers/: DialogueManager.cpp  DialogueManager.hpp  EntityManager.cpp  EntityManager.hpp  MapServerManager.cpp  MapServerManager.hpp  NPCManager.cpp  NPCManager.hpp  ServerCommunicationManager.cpp  ServerCommunicationManager.hpp  ShopManager.cpp  ShopManager.hpp  SpawnPointManager.cpp  SpawnPointManager.hpp  WarehouseManager.cpp  WarehouseManager.hpp
src/map-server/protocol/: MessageHelper.hpp
src/murimnet-server/: CMakeLists.txt
src/murimnet-server/main/: main.cpp
src/murimnet-server/managers/: MurimNetServerManager.cpp  MurimNetServerManager.hpp
src/proto/: account.pb.cc  chat.pb.h  common.pb.h  friend.pb.cc  guild.pb.cc  item.pb.cc  leaderboard.pb.cc  leaderboard.pb.h  market.pb.cc  market.pb.h  marriage.pb.cc  marriage.pb.h  movement.pb.h  npc.pb.cc  npc.pb.h  signin.pb.cc  signin.pb.h
src/protocol/: account.pb.h  achievement.pb.cc  achievement.pb.h  battle.pb.cc  battle.pb.h  chat.pb.cc  common.pb.cc  dungeon.pb.cc  dungeon.pb.h  friend.pb.h  guild.pb.h  item.pb.h  leaderboard.pb.cc  leaderboard.pb.h  mail.pb.cc  mail.pb.h  market.pb.cc  market.pb.h  marriage.pb.cc  marriage.pb.h  messages.pb.cc  messages.pb.h  mount.pb.cc  mount.pb.h  movement.pb.cc  party.pb.cc  party.pb.h  pet.pb.cc  pet.pb.h  signin.pb.cc  signin.pb.h  title.pb.cc  title.pb.h  trade.pb.cc  trade.pb.h  vip.pb.cc  vip.pb.h
src/shared/: CMakeLists.txt
src/shared/account/: Account.hpp  CMakeLists.txt  LoginManager.cpp  LoginManager.hpp
src/shared/achievement/: AchievementHandler.cpp  AchievementHandler.hpp  AchievementManager.cpp  AchievementManager.hpp  CMakeLists.txt
src/shared/ai/: AI.hpp  AIManager.cpp  AIManager.hpp  AIStateMachine.cpp  AIStateMachine.hpp  CMakeLists.txt
src/shared/battle/: AttackCalculator.cpp  AttackCalculator.hpp  Battle.hpp  BattleManager.cpp  BattleTypes.cpp  BattleTypes.hpp  Buff.hpp  BuffManager.cpp  CMakeLists.txt  DamageCalculator.cpp  DamageCalculator.cpp.bak  DamageCalculator.hpp  DistributeWay_Legacy.cpp  DistributeWay_Legacy.hpp  HealCalculator.cpp  HealCalculator.hpp  PlayerxMonsterPointTable.cpp  PlayerxMonsterPointTable.hpp  SpecialStateManager.cpp  SpecialStates.hpp  specialStateManager.hpp
src/shared/character/: CMakeLists.txt  Character.hpp  CharacterManager.cpp  CharacterManager.hpp  MonsterTemplate.hpp  Player.cpp  Player.hpp
src/shared/config/: SimpleConfigLoader.cpp  SimpleConfigLoader.hpp
src/shared/dungeon/: CMakeLists.txt  DungeonHandler.cpp  DungeonHandler.hpp  DungeonManager.cpp  DungeonManager.hpp
src/shared/game/: CMakeLists.txt  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp
src/shared/guild/: CMakeLists.txt  GuildManager.cpp  GuildManager.hpp
src/shared/item/: CMakeLists.txt  EquipmentEnchant.cpp  EquipmentEnchant.hpp  Item.hpp  ItemHandler.cpp  ItemHandler.hpp  ItemManager.cpp  ItemManager.hpp  ItemOperation.cpp  ItemOperation.hpp  MixManager.cpp  MixManager.hpp
src/shared/leaderboard/: CMakeLists.txt  LeaderboardHandler.cpp  LeaderboardHandler.hpp  LeaderboardManager.cpp  (+1 more)
(+115 files in other folders)
